--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,15 +3,16 @@ name: CI
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events for develop and v4 branche.
 on:
-  push:
-    branches:
-      - 'develop'
-      - 'v4'
-  pull_request:
-    branches:
-      - '**'
-      - '!master'
-      - '!pyup/**'
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - 'develop'
+  #     - 'v4'
+  # pull_request:
+  #   branches:
+  #     - '**'
+  #     - '!master'
+  #     - '!pyup/**'
 
 env:
   # Colored pytest output on CI despite not having a tty
