--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Build
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events for develop and v4 branche.
