--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-      max-parallel: 1
+      # max-parallel: 1
     
     steps:
       - uses: actions/checkout@v2
@@ -26,6 +26,8 @@ jobs:
         run: python waf all
         working-directory: ./bootloader
       
+      - name: Pull
+        run: git pull
       - name: Upload Bootloader
         uses: actions-js/push@master
         with:
