--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-      # max-parallel: 1
+        os: [windows-latest, ubuntu-latest, macos-latest]
+      max-parallel: 1
     
     steps:
       - uses: actions/checkout@v2
@@ -25,9 +25,9 @@ jobs:
       - name: Build Bootloader
         run: python waf all
         working-directory: ./bootloader
+      - name: Build 32b bootloader
+        run: python waf all --target-arch=32b
       
-      - name: Pull
-        run: git pull
       - name: Upload Bootloader
         uses: actions-js/push@master
         with:
