--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,9 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.11
+      - name: Install Gcc
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get install gcc-multilib
       - name: Build Bootloader
         run: python waf all --target-arch ${{ matrix.bits }}bit
         working-directory: ./bootloader
