--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
           python-version: 3.11
       - name: Install Gcc
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get install gcc-multilib zlib1g-dev
+        run: sudo apt-get install gcc-multilib zlib-dev
       - name: Build Bootloader
         run: python waf all --target-arch ${{ matrix.bits }}bit
         working-directory: ./bootloader
